# StarfarmEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  cpp.hint  hint.cpp
ECS/src/Component/: Component.hpp  ComponentContainer.hpp  ComponentManager.hpp  IComponent.cpp  IComponent.hpp  IComponentContainer.hpp
ECS/src/Entity/: Entity.hpp  EntityContainer.hpp  EntityManager.hpp  IEntity.cpp  IEntity.hpp  IEntityContainer.hpp
ECS/src/System/: ISystem.cpp  ISystem.hpp  MediumSystemManager.cpp  MediumSystemManager.hpp  System.hpp
StarfarmEngine/src/Component/: BoxCollider.cpp  BoxCollider.hpp  ColliderComponent.cpp  ColliderComponent.hpp  MonoBehaviourComponent.cpp  MonoBehaviourComponent.hpp  RenderComponent.cpp  RenderComponent.hpp  RigidbodyComponent.cpp  RigidbodyComponent.hpp  TransformComponent.hpp
StarfarmEngine/src/Core/: Game.cpp  Game.hpp  Scene.cpp  Scene.hpp  Window.cpp  Window.hpp
StarfarmEngine/src/Entity/: GameObject.cpp  GameObject.hpp
StarfarmEngine/src/Event/: Signal.cpp  Signal.hpp  WindowEventHandler.cpp  WindowEventHandler.hpp
StarfarmEngine/src/GameObject/: GameObject.cpp  GameObject.hpp
StarfarmEngine/src/Log/: LogSystem.cpp  LogSystem.hpp
StarfarmEngine/src/Physics/: BoxCollider.cpp  BoxCollider.hpp  CircleCollider.cpp  CircleCollider.hpp  ColliderComponent.cpp  ColliderComponent.hpp  Island.cpp  Island.hpp  PhysicSystem.cpp  PhysicSystem.hpp  RigidbodyComponent.cpp  RigidbodyComponent.hpp  SegmentCollider.cpp  SegmentCollider.hpp  TransformComponent.cpp  TransformComponent.hpp
StarfarmEngine/src/Render/: RenderComponent.cpp  RenderComponent.hpp  RenderSystem.cpp  RenderSystem.hpp  View.cpp  View.hpp
StarfarmEngine/src/Util/: Point.hpp  Vector.cpp  Vector.hpp  enum_flags.hpp
StarfarmEngine/src/Window/: Window.cpp  Window.hpp  WindowEventHandler.cpp  WindowEventHandler.hpp
lib/CodeAnalysis/: results.sarif
tests/: CMakeLists.txt  Template.hpp  catch.hpp  main.cpp
